Class added for preventing flicker onLoad that will be removed by JS when required

--- a/assets/sass/elements/_helpers.scss
+++ b/assets/sass/elements/_helpers.scss
@@ -27,6 +27,6 @@
 
 // Prevent flicker (DEFRA request)
 .js-cloak {
-  display: !important;  
+  display: none !important;  
 }
 
